# ChangeLog for media-libs/gegl
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/gegl/ChangeLog,v 1.107 2015/01/29 17:33:00 mgorny Exp $

  29 Jan 2015; Michał Górny <mgorny@gentoo.org> gegl-0.2.0-r2.ebuild,
  gegl-9999.ebuild:
  Switch to CPU_FLAGS_X86.

  23 Apr 2014; Pacho Ramos <pacho@gentoo.org> -gegl-0.1.6-r1.ebuild,
  -gegl-0.1.6.ebuild, -gegl-0.1.8-r1.ebuild:
  Drop old

  04 Mar 2014; Vicente Olivert Riera <vincent@gentoo.org> gegl-0.2.0-r2.ebuild:
  Add ~mips keyword.

  26 Nov 2013; Patrick Lauer <patrick@gentoo.org> gegl-0.2.0-r2.ebuild:
  Narrow down libopenraw dep #483562

  27 Oct 2013; Sebastian Pipping <sping@gentoo.org> -gegl-0.2.0-r1.ebuild:
  Removing 0.2.0-r1 for security (bug #442016)

  01 Oct 2013; Sebastian Pipping <sping@gentoo.org> gegl-0.2.0-r1.ebuild,
  gegl-0.2.0-r2.ebuild:
  Fix tests (bug #471990), thanks to David Leverton!

  25 Sep 2013; Agostino Sarubbo <ago@gentoo.org> gegl-0.2.0-r2.ebuild:
  Stable for ppc, wrt bug #481736

  23 Sep 2013; Agostino Sarubbo <ago@gentoo.org> gegl-0.2.0-r2.ebuild:
  Stable for sparc, wrt bug #481736

  23 Sep 2013; Agostino Sarubbo <ago@gentoo.org> gegl-0.2.0-r2.ebuild:
  Stable for ppc64, wrt bug #481736

  22 Sep 2013; Agostino Sarubbo <ago@gentoo.org> gegl-0.2.0-r2.ebuild:
  Stable for ia64, wrt bug #481736

  14 Sep 2013; Agostino Sarubbo <ago@gentoo.org> gegl-0.2.0-r2.ebuild:
  Stable for alpha, wrt bug #481736

  14 Sep 2013; Agostino Sarubbo <ago@gentoo.org> gegl-0.2.0-r2.ebuild:
  Stable for x86, wrt bug #481736

  14 Sep 2013; Agostino Sarubbo <ago@gentoo.org> gegl-0.2.0-r2.ebuild:
  Stable for amd64, wrt bug #481736

  09 Sep 2013; Jeroen Roovers <jer@gentoo.org> gegl-0.2.0-r2.ebuild:
  Stable for HPPA (bug #481736).

  03 Aug 2013; Markus Meier <maekke@gentoo.org> gegl-0.2.0-r2.ebuild:
  add ~arm, bug #473602

*gegl-0.2.0-r2 (04 Jul 2013)

  04 Jul 2013; Pacho Ramos <pacho@gentoo.org> +gegl-0.2.0-r2.ebuild: