@@ -1,11 +1,11 @@
 DEFINED_PHASES=compile configure install prepare test unpack
-DEPEND=>=media-libs/babl-0.1.10[introspection?] >=dev-libs/glib-2.28:2 >=x11-libs/gdk-pixbuf-2.18:2 x11-libs/pango sys-libs/zlib cairo? ( x11-libs/cairo ) ffmpeg? ( virtual/ffmpeg ) jpeg? ( virtual/jpeg ) jpeg2k? ( >=media-libs/jasper-1.900.1 ) openexr? ( media-libs/openexr ) png? ( media-libs/libpng ) raw? ( >=media-libs/libopenraw-0.0.5 ) sdl? ( media-libs/libsdl ) svg? ( >=gnome-base/librsvg-2.14:2 ) umfpack? ( sci-libs/umfpack ) introspection? ( >=dev-libs/gobject-introspection-0.10 >=dev-python/pygobject-2.26:2 ) lensfun? ( >=media-libs/lensfun-0.2.5 ) >=dev-util/intltool-0.40.1 dev-lang/perl virtual/pkgconfig >=sys-devel/libtool-2.2 vala? ( || ( dev-lang/vala:0.26[vapigen(+)] dev-lang/vala:0.24[vapigen(+)] dev-lang/vala:0.22[vapigen(+)] dev-lang/vala:0.20[vapigen(+)] ) ) >=sys-apps/sed-4 !<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.13:1.13 >=sys-devel/automake-1.15:1.15 ) >=sys-devel/autoconf-2.69 >=sys-devel/libtool-2.4 dev-vcs/git
+DEPEND=>=media-libs/babl-0.1.10[introspection?] >=dev-libs/glib-2.28:2 >=x11-libs/gdk-pixbuf-2.18:2 x11-libs/pango sys-libs/zlib cairo? ( x11-libs/cairo ) ffmpeg? ( libav? ( media-video/libav:0= ) !libav? ( media-video/ffmpeg:0= ) ) jpeg? ( virtual/jpeg ) jpeg2k? ( >=media-libs/jasper-1.900.1 ) openexr? ( media-libs/openexr ) png? ( media-libs/libpng ) raw? ( >=media-libs/libopenraw-0.0.5 ) sdl? ( media-libs/libsdl ) svg? ( >=gnome-base/librsvg-2.14:2 ) umfpack? ( sci-libs/umfpack ) introspection? ( >=dev-libs/gobject-introspection-0.10 >=dev-python/pygobject-2.26:2 ) lensfun? ( >=media-libs/lensfun-0.2.5 ) >=dev-util/intltool-0.40.1 dev-lang/perl virtual/pkgconfig >=sys-devel/libtool-2.2 vala? ( || ( dev-lang/vala:0.26[vapigen(+)] dev-lang/vala:0.24[vapigen(+)] dev-lang/vala:0.22[vapigen(+)] dev-lang/vala:0.20[vapigen(+)] ) ) >=sys-apps/sed-4 !<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.13:1.13 >=sys-devel/automake-1.15:1.15 ) >=sys-devel/autoconf-2.69 >=sys-devel/libtool-2.4 dev-vcs/git
 DESCRIPTION=A graph based image processing framework
-EAPI=4
+EAPI=5
 HOMEPAGE=http://www.gegl.org/
-IUSE=cairo debug ffmpeg introspection jpeg jpeg2k lensfun cpu_flags_x86_mmx openexr png raw sdl cpu_flags_x86_sse svg umfpack vala
+IUSE=cairo debug ffmpeg introspection jpeg jpeg2k lensfun libav cpu_flags_x86_mmx openexr png raw sdl cpu_flags_x86_sse svg umfpack vala
 LICENSE=|| ( GPL-3 LGPL-3 )
-RDEPEND=>=media-libs/babl-0.1.10[introspection?] >=dev-libs/glib-2.28:2 >=x11-libs/gdk-pixbuf-2.18:2 x11-libs/pango sys-libs/zlib cairo? ( x11-libs/cairo ) ffmpeg? ( virtual/ffmpeg ) jpeg? ( virtual/jpeg ) jpeg2k? ( >=media-libs/jasper-1.900.1 ) openexr? ( media-libs/openexr ) png? ( media-libs/libpng ) raw? ( >=media-libs/libopenraw-0.0.5 ) sdl? ( media-libs/libsdl ) svg? ( >=gnome-base/librsvg-2.14:2 ) umfpack? ( sci-libs/umfpack ) introspection? ( >=dev-libs/gobject-introspection-0.10 >=dev-python/pygobject-2.26:2 ) lensfun? ( >=media-libs/lensfun-0.2.5 )
+RDEPEND=>=media-libs/babl-0.1.10[introspection?] >=dev-libs/glib-2.28:2 >=x11-libs/gdk-pixbuf-2.18:2 x11-libs/pango sys-libs/zlib cairo? ( x11-libs/cairo ) ffmpeg? ( libav? ( media-video/libav:0= ) !libav? ( media-video/ffmpeg:0= ) ) jpeg? ( virtual/jpeg ) jpeg2k? ( >=media-libs/jasper-1.900.1 ) openexr? ( media-libs/openexr ) png? ( media-libs/libpng ) raw? ( >=media-libs/libopenraw-0.0.5 ) sdl? ( media-libs/libsdl ) svg? ( >=gnome-base/librsvg-2.14:2 ) umfpack? ( sci-libs/umfpack ) introspection? ( >=dev-libs/gobject-introspection-0.10 >=dev-python/pygobject-2.26:2 ) lensfun? ( >=media-libs/lensfun-0.2.5 )
 SLOT=0
 _eclasses_=autotools	8fc2dd333ef9346c906ffd9a523d8211	eutils	998e5931fb95b10a6a11ec796ada2759	git-2	e28f0d8a9b321431b1e699782851b827	gnome2-utils	5cdfd22a2163c9d3a891648bd19453a7	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac	vala	a41415fe361172827ed11b6a32ee38fb
-_md5_=fb66fbba66cd60815722deef9ca11c2b
+_md5_=f7bc2efaf0f6beea6b7159886371dcf3
