@@ -30,13 +30,13 @@ DIST ntp-4.2.8.tar.gz 6750364 SHA256 2e920df8b6a5a410567a73767fa458c00c7f0acec32
 EBUILD ntp-4.2.6_p5-r10.ebuild 4385 SHA256 8c30f3b8f7fcdf7ede4f534fe2c9e67f3f62cefea076fd8080d1c57a9ae305fc SHA512 18137975fa6703d877a8357da1c24279f1ab001b767257c827b10692994a8636b4fe849b5951f9a1dfbaef47c89c7356299936f82a9474aa8901d7cb3a9b1587 WHIRLPOOL ecb4b932b3ce6c86ce57c86818f803568642d654ca9925f4283a790096ae42f9ace6d6862907b171111daf8a5f0cdc68bc6fbef34a063ccc72be5fb613476bcf
 EBUILD ntp-4.2.6_p5-r11.ebuild 4416 SHA256 d6808650a0477ccae3e0a30577c24a40d789209be87098291fd949e0954f49af SHA512 cf6b5afc4c78c318af4c9f9cd4c90a0942c02f88eb61f985e6fa31352f7a11e3fc971d9913ab6d6e6101e3b02fea529573b3a91f9cfdbdc9b8dbea4b67b29115 WHIRLPOOL 56b4ad2d444dd2d95b380eef283a1f92a4bbedf103875e0eb5bbce183f862c403d8d705b1e83130c4a4dc39bdcdbf3d84a40cccac39c135cdf59a11238485209
 EBUILD ntp-4.2.8-r1.ebuild 4210 SHA256 446c49175af1b8c6eb9a871c491d1330b447cf523b3dcfe7853cdeb8b5a0eed5 SHA512 5bda7c90d38a78375664b073b3a217dbc116f46297eed8c14115f09dbe3aa4700eb6500cb9be04a3d1454a72fa624063548fa59abf6f2bd9e98df26a73c89759 WHIRLPOOL beff9484635e81e260e14eda43939e8d4674dbcbf2ecf48a4dd9b0aa8add121919fc9c1a3c22eb1abc2b2534cb1d76d5b69f4444a666c5aa07e98eaae1fd9a0f
-EBUILD ntp-4.2.8-r2.ebuild 4305 SHA256 d2880c924a028f4e5fd4fb9618ed08dcc6d69891e97525a175ba6733cca29c93 SHA512 a553dd33333c50bb3fb76f492f75ae4e637e569d6f8ebc06fca6840c9f919056f31ba6525f0d1c27d8b2cfaca70ac3d3fe41e048580148571c70529a9d443a32 WHIRLPOOL ce37c90b795aa69eae587f8fa9852a2461d6a5d681c90ba3c4a2f8569338658c2a10d9cdf2b912b388ea0bf3cb7c7addccfc12df5d3832c3d3c726ec2c3bae10
-MISC ChangeLog 32967 SHA256 c7a9e5a6778d9648b5f8d607795fdce7f9e9f55f371f0f7c869b2bac99c9c076 SHA512 b30a071104a70861c1348eaa711f2a1d8effb7cb7bd7a83edf80411b684cc3b5fa3877ac3da7148369551b2afbf14ee73ded9d0cec2351e7581156ab16dd7eb3 WHIRLPOOL 49260899949c1a3a8a0fffd05d7d9f7e8f321721cc833122f88700013b824315c0b66ff48e2a755346ef3c0c7de821e19d226f3c41087083ebd6b06acd00039a
+EBUILD ntp-4.2.8-r2.ebuild 4365 SHA256 bb13bfd0b97d1ea4ac1b19fca5725d0f2b1ca43807b159a2143056e2b144ce41 SHA512 5e6de4d1fb5d6f3fc395b1c1c38ab70c434d45c66e12c6b166e4dc231707da5304e54c009f024561eb136c749ed643595779d71c433ad120cae43fe0f6386734 WHIRLPOOL f5fccc1bfb778ede79c763e5eee4729f66233fb0899ee202a91606940c778e0ac46d007d96b0a6cb01422e5ae94476d80900fe4bcbc233a8fd1a0ee7ad1f62b4
+MISC ChangeLog 33078 SHA256 5379930e7a0d5b0ec625d7c83e1f6d9c4edc42b94ee376b30eb63d2aaa6f4f6e SHA512 356525cca488725126d0d88d685b4c638670656fa4347480e55fa9008203f5c1d44ffef81010a3a58be969969b81baacda1c21098110060194c355700599c4b2 WHIRLPOOL 8126c01e0239084ccb9f96c68ad6a03cd8be70aae3488c19734f11f97d20d3c06064aefe6bcef75b1088016d6b885db1bb355d8341b1ac64d9192ec0d4d9a856
 MISC metadata.xml 837 SHA256 57b162a2c709963d5760fdb3abe7d2a12e6e55a6abe816b16db30e9e2ae10a4e SHA512 d1403413373a0785712c40fd1a96c4649ef368b30efc5735667626ad760bb2336ba28fd335c75fc781ad6222e7dd9f53ad5dd2f558b3cbbf719104684fa0d9ed WHIRLPOOL 1513304c252dfb8f9a06a7cce1e13ab41ac80e0f0db7e231891430168df6e71a81e88984d47a694d6a5d0fd5a9c04dd1318c504baf21c7be6bd0d99b307db867
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlSaamUACgkQVWmRsqeSphPH7wCbBUW++Nfv5zjoXSHaB9Haxq/1
-fUIAniJY/0Q9LW54BiXJTOpB9jLaQRSB
-=O46f
+iF4EAREIAAYFAlTvZjEACgkQC77qH+pIQ6TrygEAw3GYjUC251Meu6U3OoMTFTBX
+zFM91MVBe3UaAuD1QtwA/0uA6SXESQCQjaADok/gnmQPCv3sNaszze7cS3bVAwCw
+=Qgqq
 -----END PGP SIGNATURE-----
