@@ -1,6 +1,9 @@
 # ChangeLog for net-misc/ntp
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/ntp/ChangeLog,v 1.230 2014/12/24 07:25:24 jer Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-misc/ntp/ChangeLog,v 1.231 2015/02/26 18:30:06 floppym Exp $
+
+  26 Feb 2015; Mike Gilbert <floppym@gentoo.org> ntp-4.2.8-r2.ebuild:
+  Add threads use flag, bug 533548.
 
   24 Dec 2014; Jeroen Roovers <jer@gentoo.org> ntp-4.2.8-r1.ebuild:
   Stable for HPPA (bug #533076).
